# What-to-eat

./: README.md  pyproject.toml
data/: image_processing.ipynb  ingredients.csv  recipe_preprocessing.ipynb
docs/: EDA.md  ml_system_design_doc.md
